<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/period_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:singleSelection="true"
        app:selectionRequired="true">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/period_today"
            style="@style/Widget.WhereAmI.Button.Period"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/period_today" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/period_yesterday"
            style="@style/Widget.WhereAmI.Button.Period"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/period_yesterday" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/period_week"
            style="@style/Widget.WhereAmI.Button.Period"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/period_week" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/period_month"
            style="@style/Widget.WhereAmI.Button.Period"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/period_month" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <WebView
        android:id="@+id/path_web"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
